opam-version: "2.0"
name: "simplehttpserver"
version: "0.1"
authors: ["Simon Cruanes"]
maintainer: "simon.cruanes.2007@m4x.org"
license: "MIT"
description: "Minimal HTTP server using good old threads"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "1.1" }
  "base-threads"
  "ocaml" { >= "4.03.0" }
  "odoc" {with-doc}
]
tags: [ "http" "thread" "server" ]
homepage: "https://github.com/c-cube/simplehttpserver/"
doc: "https://c-cube.github.io/simplehttpserver/"
bug-reports: "https://github.com/c-cube/simplehttpserver/issues"
dev-repo: "git+https://github.com/c-cube/simplehttpserver.git"
