opam-version: "2.0"
version: "0.1"
authors: ["Simon Cruanes"]
maintainer: "simon.cruanes.2007@m4x.org"
license: "MIT"
synopsis: "Minimal HTTP server using good old threads"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "1.1" }
  "base-threads"
  "ocaml" { >= "4.03.0" }
  "odoc" {with-doc}
]
tags: [ "http" "thread" "server" ]
homepage: "https://github.com/c-cube/tiny_httpd/"
doc: "https://c-cube.github.io/tiny_httpd/"
bug-reports: "https://github.com/c-cube/tiny_httpd/issues"
dev-repo: "git+https://github.com/c-cube/tiny_httpd.git"
post-messages: "tiny http server, with blocking IOs. Also ships with a `http_of_dir` program."
