opam-version: "2.0"
version: "0.9"
authors: ["Simon Cruanes"]
maintainer: "simon.cruanes.2007@m4x.org"
license: "MIT"
synopsis: "Minimal HTTP server using good old threads"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "2.0" }
  "base-threads"
  "ocaml" { >= "4.04.0" }
  "odoc" {with-doc}
  "qtest" { >= "2.9" & with-test}
  "qcheck" {with-test & >= "0.9" }
  "ounit2" {with-test}
  "ptime" {with-test}
]
tags: [ "http" "thread" "server" "tiny_httpd" "http_of_dir" "simplehttpserver" ]
homepage: "https://github.com/c-cube/tiny_httpd/"
doc: "https://c-cube.github.io/tiny_httpd/"
bug-reports: "https://github.com/c-cube/tiny_httpd/issues"
dev-repo: "git+https://github.com/c-cube/tiny_httpd.git"
post-messages: "tiny http server, with blocking IOs. Also ships with a `http_of_dir` program."
