opam-version: "2.0"
version: "0.9"
authors: ["Simon Cruanes"]
maintainer: "simon.cruanes.2007@m4x.org"
license: "MIT"
synopsis: "Interface to camlzip for tiny_httpd"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "2.0" }
  "camlzip" {>= "1.06"}
  "tiny_httpd" { = version }
  "ocaml" { >= "4.04.0" }
  "odoc" {with-doc}
]
tags: [ "http" "thread" "server" "gzip" "camlzip" ]
homepage: "https://github.com/c-cube/tiny_httpd/"
doc: "https://c-cube.github.io/tiny_httpd/"
bug-reports: "https://github.com/c-cube/tiny_httpd/issues"
dev-repo: "git+https://github.com/c-cube/tiny_httpd.git"
