(library
  (name tiny_httpd)
  (public_name tiny_httpd)
  (libraries threads seq unix
             (select Tiny_httpd_log.ml from
              (logs -> Tiny_httpd_log.logs.ml)
              (-> Tiny_httpd_log.default.ml)))
  (wrapped false))

(rule
 (targets Tiny_httpd_html_.ml)
 (deps
  (:bin ./gen/gentags.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{bin}))))

(rule
 (targets Tiny_httpd_atomic_.ml)
 (deps
  (:bin ./gen/mkshims.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{bin}))))
