(library
  (name tiny_httpd)
  (public_name tiny_httpd)
  (private_modules mime_)
  (libraries threads seq unix
             (select mime_.ml from
              (magic-mime -> mime_.magic.ml)
              ( -> mime_.dummy.ml))
             (select Tiny_httpd_log.ml from
              (logs logs.fmt fmt.tty -> Tiny_httpd_log.logs.ml)
              (-> Tiny_httpd_log.default.ml)))
  (wrapped false))

(rule
 (targets Tiny_httpd_html_.ml)
 (deps
  (:bin ./gen/gentags.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{bin}))))

(rule
 (targets Tiny_httpd_atomic_.ml)
 (deps
  (:bin ./gen/mkshims.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{bin}))))
