
(library
  (name tiny_httpd_core)
  (public_name tiny_httpd.core)
  (private_modules parse_ common_)
  (libraries threads seq hmap iostream
             (select time.ml from
              (mtime mtime.clock.os -> time.mtime.ml)
              (unix -> time.default.ml))
             (select log.ml from
              (logs -> log.logs.ml)
              (-> log.default.ml))))

(rule
 (targets Atomic_.ml)
 (deps
  (:bin ./gen/mkshims.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{bin}))))
