
(executable
  (name qtest)
  (modes native)
  (flags :standard -warn-error -a+8 -w -33)
  (libraries qcheck-core qcheck ounit2
             threads threads.posix tiny_httpd))

(rule
 (deps (glob_files ../*.ml{,i}))
 (targets qtest.ml)
 (action (run qtest extract --quiet %{deps} -o %{targets})))

(rule
  (alias runtest)
  (package tiny_httpd)
  (action (run ./qtest.exe)))

