[package]
name = "tinyhttpd-ws-client"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", default-features = false, features = ["io-std", "rt", "sync", "macros", "time"] }
tokio-tungstenite = { version = "0.21.0"  }
tungstenite = { version = "0.21.0"  }

[profile.release]
lto = "thin"
opt-level = "z"
strip = true
